# SpectralStore

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SpectralStore.md  Thinking.docx  pyproject.toml  requirements-hpc.txt
data/: README.md
docs/: 5月2日汇总.md  CURRENT_STATUS.md  EXPERIMENTS_AND_DECISIONS.md  EXPERIMENT_LOG.md  IMPLEMENTATION_NOTES.md  PROJECT_MANUAL.md  RESULTS_TO_SYSTEM_DIRECTION_ZH.md  SYSTEM_DIRECTION_A_TO_D_ZH.md  TECHNICAL_ROADMAP.md  THINKING_ALIGNMENT_AUDIT.md  THINKING_ALIGNMENT_PLAN.md
docs/report/: PROGRESS_REPORT.md
experiments/: README.md
experiments/preliminary/: README.md
experiments/smoke/: README.md
scripts/: README.md  download_dataset.py  run_preliminary_bitcoin.py  run_preliminary_synthetic_attack.py  run_preliminary_synthetic_attack_sweep.py  run_preliminary_synthetic_sbm.py  run_smoke_quickstart.py  run_synthetic_sbm_bound_scaling.py  run_synthetic_spiked_scaling.py
scripts/data/: download_dataset.py
scripts/exp1/: README.md  plot_theory_from_results.py  run_exp1_theory_validation.py  run_lowsnr_diagnostic.py  time_exp1_methods.py
scripts/exp2/: run_bitcoin_compression_ratio_sweep.py  run_bitcoin_compression_ratio_sweep_rmse.py  run_bitcoin_residual_boundary_sweep.py
scripts/exp3/: run_query_benchmark.py
scripts/exp4/: run_synthetic_attack_injection.py  (+2 more)
scripts/hpc/: init_hpc.sh  (+2 more)
tests/: test_bitcoin_residual_sweep.py  test_data_loader.py  test_evaluation_report.py  test_experiment_management.py  test_query_engine.py  test_spectral_compressors.py  test_synthetic_attack.py  test_synthetic_sbm.py
(+85 files in other folders)
